[package]
name = "ethabi-static"
version = "0.1.0"
edition = "2021"
authors = ["jordy25519"]
description = "decode Ethereum ABI types"
repository = "https://github.com/jordy25519/ethabi-static"

[dependencies]
bumpalo = { version = "*", features = ["allocator_api"], optional = true }
once_cell = { version = "*", optional = true }
ethabi-static-derive = { path = "./derive", version = "0.1.0", features = ["bump"]}
ethereum-types = "*"

[workspace]
members = ["derive", "tests"]

[features]
default = []
bump = ["bumpalo", "once_cell", "ethabi-static-derive/bump"]