[package]
name = "ethabi-static-derive"
version = "0.1.0"
edition = "2021"
authors = ["jordy25519"]
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "derive"]
description = "Statically generated Ethereum ABI decoding"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "*"
proc-macro2 = "1.0.7"

[features]
bump = []